master_node/kubia-ds.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: kubia-ds
spec:
  selector:
    matchLabels:
      app: kubia-ds
  template:
    metadata:
      labels:
        app: kubia-ds
    spec:
      nodeSelector:
        disk: kubia-ds
      containers:
      - name: main
        image: luksa/kubia
        imagePullPolicy: Never
